I have did some changnes

--- a/about/index.html
+++ b/about/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Murat Kilic Portfolio</title>
+    <title>Murat KILIC</title>
     <link rel="stylesheet" href="/main.css" />
     <script
       src="https://kit.fontawesome.com/7c17ceca3d.js"
@@ -12,15 +12,16 @@
     ></script>
   </head>
   <body>
-    <main>
-      <header>
-        <section id="home">
-          <img
-            src="/fotos/20190625_103845.jpg"
-            alt="Murat KILIÇ"
-            class="img"
-          />
-        </section>
+    <header class="grid-container">
+      <section class="grid-item grid-item-1">
+        <img src="/fotos/20190625_103845.jpg" alt="Murat KILIÇ" class="img" />
+      </section>
+      <section class="grid-item grid-item-2">
+        <div id="flashing-text" class="star-effect"></div>
+      </section>
+    </header>
+    <main class="grid-container">
+      <section class="grid-item grid-item-3">
         <nav class="navbar">
           <a href="/index.html" class="link">Home</a>
           <a href="/about/index.html" class="link">About</a>
@@ -34,26 +35,41 @@
             ><i class="fa-brands fa-linkedin"></i
           ></a>
         </nav>
-      </header>
-      <section class="container">
-        <section class="section" id="about">
-          <h1 class="h1">About</h1>
-          <h1 class="h1">Murat KILIÇ</h1>
-          <p class="p">
-            I was born in 1976 in Erzurum, Turkey. I graduated from Anadolu
-            University, Faculty of Business Administration, Department of
-            Business Administration. I have worked as an accountant and
-            accounting manager in various countries since 1996. I have worked in
-            a total of 24.5 years, including 10 years in Afghanistan, 2.5 years
-            in Somalia, 6 years in Iraq and 6 years in Istanbul. I have been
-            living in Switzerland since 2021. I chose a new industry in
-            Switzerland and decided to become a software engineer. I am
-            currently taking a FullStack course from a course called Hi Coders.
-            After completing the course, I intend to work in the IT sector.
-          </p>
-          <p>Thank You</p>
-        </section>
+      </section>
+      <section class="grid-item grid-item-4">
+        <h1 class="h1">About</h1>
+        <p class="p">
+          I was born in 1976 in Erzurum, Turkey. I graduated from Anadolu
+          University, Faculty of Business Administration, majoring in Business
+          Administration. Commencing my career as an accountant, I progressed to
+          roles of greater responsibility, eventually assuming the position of
+          accounting manager. Throughout my career spanning since 1996, I've had
+          the opportunity to work in various countries. I dedicated a decade of
+          my career to Afghanistan, followed by 2.5 years in Somalia, and then 6
+          years in Iraq. Subsequently, I spent 6 years in Istanbul. My journey
+          led me to Switzerland in 2021, where I embarked on a new path in the
+          tech industry, pivoting towards becoming a software engineer. To equip
+          myself with the requisite skills, I undertook a FullStack course at Hi
+          Coders. This transition represents a significant shift, reflecting my
+          dedication to mastering a new field and adapting to the evolving
+          landscape of technology. 
+        </p>
+        <p class="p">
+            45 years old, I learned a new language and
+          profession. I am determined when it comes to learning. I am aware that
+          I need to continue my life by constantly learning new things.
+        </p>
+        <h1 class="h1">
+            Languages I know
+        </h1>
+        <ul class="ul">
+            <li>Turkish (Native)</li>
+            <li>English (B1)</li>
+            <li>German (B1)</li>
+            <li> Persian (B2)</li>
+        </ul>
       </section>
     </main>
+    <script src="/main.js"></script>
   </body>
 </html>
