--- a/hobbies/index.html
+++ b/hobbies/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Murat Kilic Portfolio</title>
+    <title>Murat KILIC</title>
     <link rel="stylesheet" href="/main.css" />
     <script
       src="https://kit.fontawesome.com/7c17ceca3d.js"
@@ -12,15 +12,16 @@
     ></script>
   </head>
   <body>
-    <main>
-      <header>
-        <section id="home">
-          <img
-            src="/fotos/20190625_103845.jpg"
-            alt="Murat KILIÇ"
-            class="img"
-          />
-        </section>
+    <header class="grid-container">
+      <section class="grid-item grid-item-1">
+        <img src="/fotos/20190625_103845.jpg" alt="Murat KILIÇ" class="img" />
+      </section>
+      <section class="grid-item grid-item-2">
+        <div id="flashing-text" class="star-effect"></div>
+      </section>
+    </header>
+    <main class="grid-container">
+      <section class="grid-item grid-item-3">
         <nav class="navbar">
           <a href="/index.html" class="link">Home</a>
           <a href="/about/index.html" class="link">About</a>
@@ -34,49 +35,47 @@
             ><i class="fa-brands fa-linkedin"></i
           ></a>
         </nav>
-      </header>
-      <section class="container">
-        <section class="section" id="hobbies">
-          <div class="hobbies">
-            <h1 class="h1">Hobbies</h1>
-            <ul class="ul">
-              <li>Reading Book</li>
-              <li>Travelling</li>
-              <li>walking</li>
-              <li>
-                Money Collection
-                <a
-                  href="https://paramfn.blogspot.com/"
-                  target="_blank"
-                  class="link1"
-                  >(Click here to access my coin collection)</a
-                >
-              </li>
-            </ul>
-          </div>
-          <div class="hobbies">
-            <h1 class="h1">Countries I've Visited</h1>
-            <ul class="ul">
-              <li>USA</li>
-              <li>Afghanistan</li>
-              <li>Pakistan</li>
-              <li>Iran</li>
-              <li>Ozbekistan</li>
-              <li>Turkmenistan</li>
-              <li>Iraq</li>
-              <li>Saudia Arabia</li>
-              <li>Qatar</li>
-              <li>UAE</li>
-              <li>Jorden</li>
-              <li>Somalia</li>
-              <li>Kenya</li>
-              <li>Ethiopya</li>
-              <li>Romania</li>
-              <li>Switzerland</li>
-            </ul>
-          </div>
-        </section>
+      </section>
+      <section class="grid-item grid-item-4">
+        <div class="hobbies">
+          <h1 class="h1">Hobbies</h1>
+          <ul class="ul">
+            <li>Reading Book</li>
+            <li>Travelling</li>
+            <li>walking</li>
+            <li>
+              Money Collection
+              <a
+                href="https://paramfn.blogspot.com/"
+                target="_blank"
+                >(Click here to access my money collection)</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="hobbies">
+          <h1 class="h1">Countries I've Visited</h1>
+          <ul class="ul">
+            <li>USA</li>
+            <li>Afghanistan</li>
+            <li>Pakistan</li>
+            <li>Iran</li>
+            <li>Ozbekistan</li>
+            <li>Turkmenistan</li>
+            <li>Iraq</li>
+            <li>Saudia Arabia</li>
+            <li>Qatar</li>
+            <li>UAE</li>
+            <li>Jorden</li>
+            <li>Somalia</li>
+            <li>Kenya</li>
+            <li>Ethiopya</li>
+            <li>Romania</li>
+            <li>Switzerland</li>
+          </ul>
+        </div>
       </section>
     </main>
+    <script src="/main.js"></script>
   </body>
 </html>
