--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Murat Kilic Portfolio</title>
+    <title>Murat KILIC</title>
     <link rel="stylesheet" href="./main.css" />
     <script
       src="https://kit.fontawesome.com/7c17ceca3d.js"
@@ -12,15 +12,16 @@
     ></script>
   </head>
   <body>
-    <main>
-      <header>
-        <section id="home">
-          <img
-            src="./fotos/20190625_103845.jpg"
-            alt="Murat KILIÇ"
-            class="img"
-          />
-        </section>
+    <header class="grid-container">
+      <section class="grid-item grid-item-1">
+        <img src="./fotos/20190625_103845.jpg" alt="Murat KILIÇ" class="img" />
+      </section>
+      <section class="grid-item grid-item-2">
+        <div id="flashing-text" class="star-effect"></div>
+      </section>
+    </header>
+    <main class="grid-container">
+      <section class="grid-item grid-item-3">
         <nav class="navbar">
           <a href="./index.html" class="link">Home</a>
           <a href="./about/index.html" class="link">About</a>
@@ -34,15 +35,22 @@
             ><i class="fa-brands fa-linkedin"></i
           ></a>
         </nav>
-      </header>
-      <section class="container">
-        <h1 class="h1">Welcome on my profile page</h1>
+      </section>
+      <section class="grid-item grid-item-4">
+        <h1 class="h1">Welcome to my profile page</h1>
+        <p class="p">Hi there!</p>
         <p class="p">
-          I hope you will enjoy browsing my profile page. Visit my other pages
-          to learn more about me.
+          I'm Murat KILIC, a dedicated Full Stack developer with a passion for
+          crafting efficient and dynamic web applications. Proficient in both
+          front-end and back-end technologies, I enjoy bringing ideas to life by
+          utilizing a wide range of programming languages and frameworks. My
+          goal is to create seamless user experiences while ensuring robust
+          functionality under the hood. Let's collaborate and build impactful
+          solutions together!
         </p>
-        <p class="p">Thank You</p>
+        <p class="p">Thank You.</p>
       </section>
     </main>
+    <script src="main.js"></script>
   </body>
 </html>
