--- a/contact/index.html
+++ b/contact/index.html
@@ -12,15 +12,16 @@
     ></script>
   </head>
   <body>
-    <main>
-      <header>
-        <section id="home">
-          <img
-            src="/fotos/20190625_103845.jpg"
-            alt="Murat KILIÇ"
-            class="img"
-          />
-        </section>
+    <header class="grid-container">
+      <section class="grid-item grid-item-1">
+        <img src="/fotos/20190625_103845.jpg" alt="Murat KILIÇ" class="img" />
+      </section>
+      <section class="grid-item grid-item-2">
+        <div id="flashing-text" class="star-effect"></div>
+      </section>
+    </header>
+    <main class="grid-container">
+      <section class="grid-item grid-item-3">
         <nav class="navbar">
           <a href="/index.html" class="link">Home</a>
           <a href="/about/index.html" class="link">About</a>
@@ -34,54 +35,17 @@
             ><i class="fa-brands fa-linkedin"></i
           ></a>
         </nav>
-      </header>
-      <section class="container">
-        <section class="section" id="contact">
-          <h1 class="h1">Contact</h1>
-          <br />
-          <br />
-          <form action="#">
-            <label for="name" class="label">Name</label><br />
-            <input
-              type="text"
-              class="input"
-              placeholder="Your Name"
-              required
-            /><br />
-            <label for="surname" class="label">Surname</label><br />
-            <input
-              type="text"
-              class="input"
-              placeholder="Your Surname"
-              required
-            /><br />
-            <label for="email" class="label">Email</label><br />
-            <input
-              type="email"
-              class="input"
-              placeholder="Your E-mail Address"
-              required
-            /><br />
-            <label for="message" class="label">Message</label><br />
-            <textarea
-              name="textarea"
-              id="textarea"
-              cols="60"
-              rows="10"
-              placeholder="Your Message"
-              required
-            ></textarea
-            ><br />
-            <div class="button">
-              <a href="#1"
-                ><button type="reset" class="button1">Reset</button></a
-              >
-              <a href="#1"
-                ><button type="submit" class="button1">Submit</button></a
-              >
-            </div>
-          </form>
-        </section>
+      </section>
+      <section class="grid-item grid-item-4">
+        <h1 class="h1">Contact</h1>
+        <p class="p">
+          You can contact me by email:
+          <a href="mailto:mrtklcerz@gmail.com">mrtklcerz@gmail.com</a>
+        </p>
+        <p class="p">
+            Murat KILIC <br>
+            Schwyz / Switzerland
+        </p>
       </section>
     </main>
   </body>
