--- a/fotos/index.html
+++ b/fotos/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Murat Kilic Portfolio</title>
+    <title>Murat KILIC</title>
     <link rel="stylesheet" href="/main.css" />
     <script
       src="https://kit.fontawesome.com/7c17ceca3d.js"
