--- a/contact/index.html
+++ b/contact/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Murat Kilic Portfolio</title>
-    <link rel="stylesheet" href="/main.css" />
+    <link rel="stylesheet" href="/css/main.css" />
     <script
       src="https://kit.fontawesome.com/7c17ceca3d.js"
       crossorigin="anonymous"
@@ -43,10 +43,11 @@
           <a href="mailto:mrtklcerz@gmail.com">mrtklcerz@gmail.com</a>
         </p>
         <p class="p">
-            Murat KILIC <br>
-            Schwyz / Switzerland
+          Murat KILIC <br />
+          Schwyz / Switzerland
         </p>
       </section>
     </main>
+    <script src="/javaScript/main.js"></script>
   </body>
 </html>
