--- a/fotos/index.html
+++ b/fotos/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Murat KILIC</title>
-    <link rel="stylesheet" href="/main.css" />
+    <link rel="stylesheet" href="/css/main.css" />
     <script
       src="https://kit.fontawesome.com/7c17ceca3d.js"
       crossorigin="anonymous"
@@ -49,6 +49,6 @@
         </section>
       </section>
     </main>
-    <script src="/main.js"></script>
+    <script src="/javaScript/main.js"></script>
   </body>
 </html>
