new country added

--- a/hobbies/index.html
+++ b/hobbies/index.html
@@ -72,6 +72,11 @@
             <li>Ethiopya</li>
             <li>Romania</li>
             <li>Switzerland</li>
+            <li>Germany</li>
+            <li>Austria</li>
+            <li>Italy</li>
+            <li>France</li>
+            <li>Liechtenstein</li>
           </ul>
         </div>
       </section>
